--- a/tailwind/package.json
+++ b/tailwind/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog",
+  "name": "tailwind",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "json-server": "1.0.0-beta.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-loader-spinner": "^6.1.6"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
