--- a/appp/package.json
+++ b/appp/package.json
@@ -14,7 +14,12 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.21",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "axios": "^1.6.7",
+    "react-icons": "^5.0.1",
+    "react-multi-carousel": "^2.8.4",
+    "react-router-dom": "^6.22.2",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -28,6 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "vite": "^5.3.1"
   }
 }
